[gd_scene load_steps=24 format=2]

[ext_resource path="res://Xeno.gd" type="Script" id=1]
[ext_resource path="res://DateTimeRT.gd" type="Script" id=2]
[ext_resource path="res://CamMouse.gd" type="Script" id=4]
[ext_resource path="res://sites.gd" type="Script" id=5]
[ext_resource path="res://site.tscn" type="PackedScene" id=7]
[ext_resource path="res://Game.gd" type="Script" id=8]
[ext_resource path="res://HoverUI.gd" type="Script" id=9]
[ext_resource path="res://UI.gd" type="Script" id=25]
[ext_resource path="res://images/icon/icon_gear.png" type="Texture" id=29]
[ext_resource path="res://images/icon/icon_menuofficer.png" type="Texture" id=30]
[ext_resource path="res://images/icon/icon_shipmanagement.png" type="Texture" id=31]
[ext_resource path="res://images/icon/icon_starmap.png" type="Texture" id=32]
[ext_resource path="res://images/icon/icon_techtree.png" type="Texture" id=34]
[ext_resource path="res://fleets.gd" type="Script" id=37]
[ext_resource path="res://fleet.tscn" type="PackedScene" id=39]
[ext_resource path="res://StarMap.gd" type="Script" id=42]

[sub_resource type="OpenSimplexNoise" id=1]
period = 32.0
persistence = 0.25

[sub_resource type="NoiseTexture" id=2]
noise = SubResource( 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.280543, 0.669683, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="Curve" id=5]
min_value = -1.0
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 1024, 1024, 1 )
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 4 )
hue_variation = 0.03
hue_variation_random = 0.44
hue_variation_curve = SubResource( 6 )

[node name="Main" type="Node"]
script = ExtResource( 8 )

[node name="Xeno" type="Node" parent="."]
script = ExtResource( 1 )

[node name="StarMap" type="Node2D" parent="."]
pause_mode = 2
script = ExtResource( 42 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="StarMap"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="StarMap/ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.5, 0.5 )
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="bg" type="Sprite" parent="StarMap/ParallaxBackground/ParallaxLayer"]
self_modulate = Color( 0.117647, 0.117647, 0.117647, 0.878431 )
position = Vector2( 0, -3.3241 )
scale = Vector2( 4, 4 )
texture = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Particles2D" type="Particles2D" parent="StarMap/ParallaxBackground/ParallaxLayer"]
amount = 128
lifetime = 64.0
preprocess = 3.0
process_material = SubResource( 7 )

[node name="ParallaxLayer2" type="ParallaxLayer" parent="StarMap/ParallaxBackground"]
visible = false
motion_scale = Vector2( 0.3, 0.3 )

[node name="Particles2D2" type="Particles2D" parent="StarMap/ParallaxBackground/ParallaxLayer2"]
amount = 128
preprocess = 3.0
process_material = SubResource( 7 )

[node name="sites" type="Node2D" parent="StarMap"]
script = ExtResource( 5 )
site_prefab = ExtResource( 7 )

[node name="fleets" type="Node2D" parent="StarMap"]
script = ExtResource( 37 )
fleetPrefab = ExtResource( 39 )

[node name="MainCam" type="Camera2D" parent="StarMap"]
current = true
limit_smoothed = true
script = ExtResource( 4 )

[node name="HoverUI" type="CanvasLayer" parent="StarMap/MainCam"]
script = ExtResource( 9 )

[node name="UI" type="CanvasLayer" parent="."]
pause_mode = 2
layer = 3
script = ExtResource( 25 )

[node name="MainUI" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.36038
margin_bottom = -1.36035
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeControl" type="HBoxContainer" parent="UI/MainUI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -117.0
margin_right = 117.0
margin_bottom = 44.0
mouse_filter = 2
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DateTime" type="RichTextLabel" parent="UI/MainUI/TimeControl"]
margin_right = 234.0
margin_bottom = 44.0
size_flags_horizontal = 3
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "2000Y1M12D 00:00"
script = ExtResource( 2 )

[node name="Token" type="RichTextLabel" parent="UI/MainUI"]
margin_right = 134.0
margin_bottom = 23.0
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ControlPanel" type="HBoxContainer" parent="UI/MainUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -285.0
margin_bottom = 36.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="Button" parent="UI/MainUI/ControlPanel"]
margin_right = 42.0
margin_bottom = 36.0
size_flags_horizontal = 3
icon = ExtResource( 32 )
expand_icon = true

[node name="Ship" type="Button" parent="UI/MainUI/ControlPanel"]
margin_left = 46.0
margin_right = 88.0
margin_bottom = 36.0
size_flags_horizontal = 3
icon = ExtResource( 31 )
expand_icon = true

[node name="Fleet" type="Button" parent="UI/MainUI/ControlPanel"]
margin_left = 92.0
margin_right = 144.0
margin_bottom = 36.0
size_flags_horizontal = 3
text = "Fleet"
icon = ExtResource( 31 )
expand_icon = true

[node name="Member" type="Button" parent="UI/MainUI/ControlPanel"]
margin_left = 148.0
margin_right = 190.0
margin_bottom = 36.0
size_flags_horizontal = 3
icon = ExtResource( 30 )
expand_icon = true

[node name="Tech" type="Button" parent="UI/MainUI/ControlPanel"]
margin_left = 194.0
margin_right = 236.0
margin_bottom = 36.0
size_flags_horizontal = 3
icon = ExtResource( 34 )
expand_icon = true

[node name="Menu" type="Button" parent="UI/MainUI/ControlPanel"]
margin_left = 240.0
margin_right = 285.0
margin_bottom = 36.0
size_flags_horizontal = 3
icon = ExtResource( 29 )
expand_icon = true

[node name="message" type="RichTextLabel" parent="UI/MainUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -174.0
margin_right = 379.0
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="toggle_msg" type="Button" parent="UI/MainUI"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -18.0
margin_right = 22.0
toggle_mode = true
pressed = true
text = "^"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="UI/MainUI/ControlPanel/Map" to="UI" method="_on_Map_pressed"]
[connection signal="pressed" from="UI/MainUI/ControlPanel/Member" to="." method="_on_Member_pressed"]
[connection signal="toggled" from="UI/MainUI/toggle_msg" to="." method="_on_toggle_msg_toggled"]
